[gd_scene load_steps=3 format=3 uid="uid://b4mpdhviitnf4"]

[ext_resource type="Script" path="res://season/week2.gd" id="1_lrwcc"]
[ext_resource type="Texture2D" uid="uid://bv3q5vrommeos" path="res://briefcase.png" id="2_nrnsh"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lrwcc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -29.0
offset_top = -31.0
offset_right = 1183.0
offset_bottom = 675.0
color = Color(0.545098, 0.270588, 0.0745098, 1)

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 100.0
offset_top = 14.0
offset_right = 272.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 50
text = "Season"

[node name="Label2" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 100.0
offset_top = 130.0
offset_right = 624.0
offset_bottom = 172.0
theme_override_font_sizes/font_size = 30
text = "Here are your options for Week 2, Coach"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 471.0
offset_top = 281.0
offset_right = 739.0
offset_bottom = 344.0
theme_override_font_sizes/font_size = 40
text = "Run Practices"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 306.0
offset_top = 396.0
offset_right = 940.0
offset_bottom = 459.0
theme_override_font_sizes/font_size = 40
text = "Simulate Second Week of Games"

[node name="CoachButton" type="Button" parent="."]
offset_left = 1011.0
offset_top = 8.0
offset_right = 1141.0
offset_bottom = 71.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 30
text = "Office"
icon = ExtResource("2_nrnsh")
flat = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CoachButton" to="." method="_on_coach_button_pressed"]
